# Add Icon to Application
if(MSVC)
	SET(s25client_RC "${CMAKE_SOURCE_DIR}/win32/s25client.rc")
	ADD_FLAGS(CMAKE_EXE_LINKER_FLAGS /MANIFEST:NO)
ELSEif("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows" AND NOT ${CMAKE_HOST_SYSTEM_NAME} MATCHES "Windows")
	ADD_DEFINITIONS("-DAFX_TARG_DEU")
	ADD_FLAGS(CMAKE_EXE_LINKER_FLAGS -Wl,--stack,8388608)

	ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/s25client.res.o
					   COMMAND ${CMAKE_RC_COMPILER} -I${CMAKE_SOURCE_DIR}/win32/ -i${CMAKE_SOURCE_DIR}/win32/s25client.rc -o ${CMAKE_CURRENT_BINARY_DIR}/s25client.res.o)

	SET(s25client_RC ${CMAKE_CURRENT_BINARY_DIR}/s25client.res.o)
ELSE()
	SET(s25client_RC "")
ENDIF()

ADD_EXECUTABLE(s25client s25client.cpp ${s25client_RC})
TARGET_LINK_LIBRARIES(s25client s25Main)

if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
	TARGET_LINK_LIBRARIES(s25client ${SDL_LIBRARY} SDLmain)
	SET_TARGET_PROPERTIES(s25client PROPERTIES LINK_FLAGS "-framework Cocoa")
elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
	TARGET_LINK_LIBRARIES(s25client ole32 ws2_32 shlwapi imagehlp)
	if(NOT MSVC)
		TARGET_LINK_LIBRARIES(s25client bfd iberty)
	ENDIF()
elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
	TARGET_LINK_LIBRARIES(s25client pthread)
elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "FreeBSD")
	TARGET_LINK_LIBRARIES(s25client execinfo)
ENDif()

if(MSVC)
	CMAKE_POLICY(SET CMP0026 OLD) # Required for use of LOCATION_*
	INCLUDE(CreateLaunchers)
	CREATE_DEFAULT_TARGET_LAUNCHER(s25client ENVIRONMENT RTTR_PREFIX_DIR=${CMAKE_BINARY_DIR})
    if(RTTR_BINARIES_TO_COPY)
        foreach(file_i ${RTTR_BINARIES_TO_COPY})
            add_custom_command(TARGET s25client POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy ${file_i} $<TARGET_FILE_DIR:s25client>)
        endforeach()
    endif()
ELSE()
	SET_TARGET_PROPERTIES(s25client PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/${RTTR_BINDIR}"
		RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/${RTTR_BINDIR}"
		RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/${RTTR_BINDIR}"
	)
ENDIF()

INSTALL(TARGETS s25client RUNTIME DESTINATION ${RTTR_BINDIR})
